--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,36 @@
   <script src="billet.js"></script>
 </head>
 <body>
-recep ozdemir
+<h1>Bestilling av kinobiletter</h1>
+<form id="form">
+    Velg film: <select name="" id="selectFilm">
+    <option value="">Film-Velg film her</option>
+    <option value="Film-1">Film-1</option>
+    <option value="Film-2">Film-2</option>
+    <option value="Film-3">Film-3</option>
+    <option value="Film-4">Film-4</option>
+    <option value="Film-5">Film-5</option>
+</select><br><br>
+    Antall : <input id="antall" type="number" min="1" style="width: 33px"><span id="feilMeldingAntall" style="color: red"></span><br><br>
+    Fornavn : <input id="fornavn" type="text"><span id="feilMeldingFornavn" style="color: red"></span><br>
+    Etternavn : <input id="etternavn" type="text"><span id="feilMeldingEtternavn" style="color: red"></span><br>
+    Telefonnr : <input id="telefonnr" type="tel" pattern="[0-9]{8}" required><span id="feilMeldingTelefonnr" style="color: red"></span><br>
+    Email : <input id="email" type="text"><span id="feilMeldingEmail" style="color: red"></span><br><br>
+</form>
+<button onclick="valition()" value="">Kjøp bilett</button>
+<br><br>
+<h3>Alle Billetter</h3>
+<table>
+    <thead>
+    <th>Film</th>
+    <th>Antall</th>
+    <th>Fornavn</th>
+    <th>Etternavn</th>
+    <th>TelefonNr</th>
+    <th>Email</th>
+    </thead>
+    <tbody id="table"></tbody>
+</table>
+<button onclick="slett()">Slett alle billettene</button>
 </body>
 </html>
